# 021_HackX

./: .gitignore  package.json  pnpm-lock.yaml
BE/: .gitignore  main.py  pyproject.toml
BE/app/core/: security.py
BE/app/database/: connection.py
BE/app/database/models/: candidate.py  common.py  gmail_integration.py  job.py  recruiter.py  resume_analysis.py  template.py  user.py
BE/app/middleware/: security.py
BE/app/router/: auth.py  dashboard.py  gmail_integration.py  jobs.py  profile.py  resume_analyze.py  resume_create.py  templates.py  trends.py
BE/app/schema/: auth.py  candidate.py  profile.py  template.py  trends.py  user.py
BE/app/services/: analyze_service.py  auth_service.py  email_service.py  gmail_service.py  scanner_service.py  scheduler_service.py  trends_service.py
BE/app/utils/: logger.py
FE/: README.md  package.json  pnpm-lock.yaml
FE/src/: middleware.ts
FE/src/app/: globals.css  layout.tsx  page.tsx
FE/src/components/: Footer.tsx  HowItWorks.tsx  ThemeToggle.tsx
FE/src/constants/: dashboardData.ts  featuresVisualizationData.ts  howItWorksData.ts  navbarData.ts  pricingData.ts  sideBarData.ts  signUpData.ts  waitlistData.ts
FE/src/db/: dbClient.ts
FE/src/handler/: analyzeHandler.ts  authHandler.ts  createHandler.ts
FE/src/lib/: validation.ts
FE/src/types/: HowItWorks.tsx  typeResume.ts
src/app/: globals.css  page.tsx
src/components/: Benefits.tsx  FAQ.tsx  Features.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx  ProblemSolution.tsx  WaitList.tsx
src/constants/: faqData.ts  footerData.ts  heroData.ts  toastData.ts
(+75 files in other folders)
